# single-cell-scripts

./: README.md  ab_seq.py  gene_from_fastq.py  genotype_cohort.py  network.py  phage_seq.py  pyproject.toml  scCell_count_normalizations.py
scripts/: concatenate_fastq.py  gene_from_fastq.py
src/sctools/: __init__.py  ab_seq.py  amplicon.py  barcodes.py  network.py  normalization.py  phage_seq.py  utilities.py
